Новый вариант библиографии

--- a/article_IP.bib
+++ b/article_IP.bib
@@ -27,7 +27,7 @@ ISSN={0891-7736},}
 
 @misc{Nsnam.org,
   author = {Nsnam.org},
-  title = {NS-3},
+  title = {NS--3},
   howpublished = {Retrieved  March, 15, 2013 from  \url{http://www.nsnam.org}},
   year = {2013},
 }
@@ -40,7 +40,7 @@ ISSN={0891-7736},}
 }
 
 @misc{Andreev,
-  author = {Kirill Andreev and Pavel Boyko},
+  author = {Andreev, Kirill and Boyko, Pavel},
   title = {IEEE 802.11s Mesh Networking NS-3 Model},
   howpublished = {Retrieved  March, 15, 2013 from  \url{http://www.nsnam.org/workshops/wns3-2010/dot11s.pdf}},
   year = {2013},
@@ -71,14 +71,14 @@ ISSN={0891-7736},}
 }
 
 @misc{Seong-Youp,
-  author = {Seong-Youp Suh, Salih Yarga, Anand S. Konanur},
+  author = {Seong-Youp, Suh and Salih, Yarga and Konanur, S., Anand},
   title = {Multiprotocol antenna structure and method for synthesizing a multiprotocol antenna pattern},
   howpublished = {US Patent PCT/US2010/042396.},
   year = {2010},
 }
 
 @INPROCEEDINGS{Instrumental,
-     author = {Glazunov Vadim, Kurochkin Leonid,  Kurochkin Mihail and Popov Sergey},
+     author = {Glazunov, Vadim and Kurochkin, Leonid and Kurochkin, Mihail and  Popov, Sergey},
       title = {Instrumental Environment of Multi-Protocol Cloud-Oriented Vehicular MESH Network},
   booktitle = {10th International Conference on Informatics in Control, Automation and Robotics (ICINCO)},
        year = {2013},
@@ -86,7 +86,7 @@ ISSN={0891-7736},}
 }
 
 @INPROCEEDINGS{Road,
-     author = {Glazunov Vadim, Kurochkin Leonid, Kurochkin Mihail and Popov Sergey},
+     author = {Glazunov, Vadim and Kurochkin, Leonid and Kurochkin, Mihail and  Popov, Sergey},
       title = {Road Traffic Efficiency and Safety Improvements Trends},
   booktitle = {10th International Conference on Informatics in Control, Automation and Robotics (ICINCO)},
        year = {2013},
@@ -94,7 +94,7 @@ ISSN={0891-7736},}
 }
 
 @misc{GOST,
-  author = {Национальный стандарт Российской Федерации},
+  author = {ГОСТ Р 54620-2011},
   title = {Глобальная навигационная спутниковая система. Система экстренного реагирования при авариях. Автомобильная система вызова экстренных оперативных служб. Общие технические требования},
   howpublished = {Стандартинформ, Москва},
   year = {2012},
